# cpp20-workflow-engine

./: .gitignore  CMakeLists.txt  README.md
config/: audio_edit_workflow.json  full_ai_pipeline.json  llm_analysis_workflow.json  workflow.json
core/: CMakeLists.txt  ControlPlane.cpp  ControlPlane.h  GraphBuilder.cpp  GraphBuilder.h  PluginRegistry.cpp  PluginRegistry.h
examples/: CMakeLists.txt  json_taskflow_demo.cpp
include/: AsyncLogger.h  ConfigWatcher.h  EngineMetrics.h  ExecutionContext.h  LockFreeRingBuffer.h  NodeExecutionWrapper.h  NodeState.h  PluginManager.h  PluginNodeAdapter.h  ScopedTimer.h  ThreadPool.h  WorkflowEngine.h  WorkflowNode.h
plugins/: example_plugin.cpp  llm_audio_editor_plugin.cpp  llm_text_analyzer_plugin.cpp
src/: ConfigWatcher.cpp  ExecutionContext.cpp  PluginManager.cpp  ThreadPool.cpp  WorkflowEngine.cpp  main.cpp
tests/: CMakeLists.txt  test_execution_context.cpp  test_lock_free_ring_buffer.cpp  test_plugin_registry.cpp  test_thread_pool.cpp  test_workflow_engine.cpp
tools/: CMakeLists.txt  workflow-cli.cpp
